welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: value += is not a member of Int
    cpt+=1
       ^Diagonal:17: error: value += is not a member of Int
    num+=1
       ^Diagonal:21: error: value += is not a member of Int
    num+=1
       ^Diagonal:22: error: not found: value getMondeHeuteur
    setPos(getX()+1,getMondeHeuteur()-1)
                    ^